# api/openapi/api.swagger.json
@@ -293,6 +293,119 @@
         ]
       }
     },
+    "/api/organization/{id}/tariff": {
+      "delete": {
+        "operationId": "CrudService_DeleteOrganizationTariff",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/grpcEmpty"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "tariff_id",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "tags": [
+          "CrudService"
+        ]
+      },
+      "post": {
+        "summary": "Organization tariff operations",
+        "operationId": "CrudService_AddOrganizationTariff",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/grpcOrganizationTariffResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/grpcOrganizationTariffRequest"
+            }
+          }
+        ],
+        "tags": [
+          "CrudService"
+        ]
+      },
+      "put": {
+        "operationId": "CrudService_UpdateOrganizationTariff",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/grpcOrganizationTariffResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/grpcOrganizationTariffRequest"
+            }
+          }
+        ],
+        "tags": [
+          "CrudService"
+        ]
+      }
+    },
     "/api/organizations": {
       "get": {
         "summary": "Organization CRUD operations",
@@ -1253,6 +1366,119 @@
         ]
       }
     },
+    "/api/user/{id}/tariff": {
+      "delete": {
+        "operationId": "CrudService_DeleteUserTariff",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/grpcEmpty"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "tariff_id",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "tags": [
+          "CrudService"
+        ]
+      },
+      "post": {
+        "summary": "User tariff operations",
+        "operationId": "CrudService_AddUserTariff",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/grpcUserTariffResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/grpcUserTariffRequest"
+            }
+          }
+        ],
+        "tags": [
+          "CrudService"
+        ]
+      },
+      "put": {
+        "operationId": "CrudService_UpdateUserTariff",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/grpcUserTariffResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/grpcUserTariffRequest"
+            }
+          }
+        ],
+        "tags": [
+          "CrudService"
+        ]
+      }
+    },
     "/api/users": {
       "get": {
         "summary": "User CRUD operations",
@@ -1359,6 +1585,10 @@
         "name": {
           "type": "string"
         },
+        "tariff_id": {
+          "type": "integer",
+          "format": "int32"
+        },
         "permissions": {
           "type": "array",
           "items": {
@@ -1404,6 +1634,27 @@
             "type": "integer",
             "format": "int32"
           }
+        }
+      }
+    },
+    "grpcOrganizationTariffRequest": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "tariff_id": {
+          "type": "integer",
+          "format": "int32"
+        }
+      }
+    },
+    "grpcOrganizationTariffResponse": {
+      "type": "object",
+      "properties": {
+        "tariff": {
+          "$ref": "#/definitions/grpcTariff"
         }
       }
     },
@@ -1684,6 +1935,14 @@
         "email": {
           "type": "string"
         },
+        "organization_id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "tariff_id": {
+          "type": "integer",
+          "format": "int32"
+        },
         "organization": {
           "$ref": "#/definitions/grpcOrganization"
         },
@@ -1742,6 +2001,27 @@
             "type": "integer",
             "format": "int32"
           }
+        }
+      }
+    },
+    "grpcUserTariffRequest": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "tariff_id": {
+          "type": "integer",
+          "format": "int32"
+        }
+      }
+    },
+    "grpcUserTariffResponse": {
+      "type": "object",
+      "properties": {
+        "tariff": {
+          "$ref": "#/definitions/grpcTariff"
         }
       }
     },
