# internal/models/user.go
@@ -2,9 +2,10 @@ package models
 
 // User represents a user data structure
 type User struct {
-	ID             int           `json:"id"`
-	Name           string        `json:"name"`
-	Email          string        `json:"email"`
-	PasswordHash   string        `json:"password_hash"`
-	Organization   *Organization `json:"organization"`
+	ID           int           `json:"id"`
+	Name         string        `json:"name"`
+	Email        string        `json:"email"`
+	PasswordHash string        `json:"password_hash"`
+	Organization *Organization `json:"organization"`
+	TariffID     *int          `json:"tariff_id,omitempty"`
 }
